--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "@emotion/react": "^11.7.1",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
+    "@googlemaps/js-api-loader": "^1.13.1",
     "@mui/material": "^5.2.7",
     "@mui/styles": "^5.2.3",
+    "googlemaps": "^1.12.0",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-map-gl": "^6.1.18",
+    "react-mapbox-gl": "^5.1.1"
   },
   "devDependencies": {
     "eslint": "8.6.0",
