--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@googlemaps/js-api-loader": "^1.13.1",
     "@mui/material": "^5.2.7",
     "@mui/styles": "^5.2.3",
+    "axios": "^0.24.0",
     "googlemaps": "^1.12.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-map-gl": "^6.1.18",
+    "react-map-gl-geocoder": "^2.2.0",
     "react-mapbox-gl": "^5.1.1"
   },
   "devDependencies": {
