--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@googlemaps/js-api-loader": "^1.13.1",
     "@mui/material": "^5.2.7",
     "@mui/styles": "^5.2.3",
+    "@turf/turf": "^6.5.0",
     "axios": "^0.24.0",
     "googlemaps": "^1.12.0",
     "next": "12.0.7",
