Added line graph

--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "axios": "^0.24.0",
     "googlemaps": "^1.12.0",
     "next": "12.0.7",
+    "plotly.js": "^2.8.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-map-gl": "^6.1.18",
-    "react-mapbox-gl": "^5.1.1"
+    "react-mapbox-gl": "^5.1.1",
+    "react-plotly.js": "^2.5.1"
   },
   "devDependencies": {
     "eslint": "8.6.0",
