--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
     "@googlemaps/js-api-loader": "^1.13.1",
+    "@mui/icons-material": "^5.3.0",
     "@mui/material": "^5.2.7",
     "@mui/styles": "^5.2.3",
     "@turf/turf": "^6.5.0",
