--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "12.0.7",
     "plotly.js": "^2.8.3",
     "react": "17.0.2",
+    "react-custom-scrollbars-2": "^4.4.0",
     "react-dom": "17.0.2",
     "react-map-gl": "^6.1.18",
     "react-mapbox-gl": "^5.1.1",
